# minigps

./: Cargo.toml  README.md
.github/workflows/: rust.yml
resources/testdata/: test.gpx
src/: aid.rs  lib.rs  poi.rs  trail.rs
