[package]
name = "minigps"
version = "0.1.1"
edition = "2018"
description = "Library for MiniGPS file format support"
authors = ["Slava Barinov <rayslava@gmail.com>"]
license = "MIT"
keywords = ["gps", "minigps", "geo", "geodata"]
categories = ["encoding"]
documentation = "https://docs.rs/minigps"
readme = "README.md"
homepage = "https://github.com/rayslava/minigps"
repository = "https://github.com/rayslava/minigps"

[badges]
maintenance = { status = "actively-developed" }
github = { repository = "rayslava/minigps", workflow = "ci" }
codecov = { repository = "rayslava/minigps", branch = "master", service = "github" }

[dependencies]
byteorder = { version = "1.4" }
chrono = { version = "0.4" }
gpx = { version = "0.8.6" }

[dev-dependencies]
assert_approx_eq = "1"