[package]
name = "minigps"
version = "0.1.1"
edition = "2018"
description = "Library for MiniGPS file format support"
authors = ["Slava Barinov <rayslava@gmail.com>"]
license = "MIT"
keywords = ["gps", "minigps", "geo", "geodata"]
categories = ["encoding"]
documentation = "https://docs.rs/minigps"
readme = "README.md"
homepage = "https://github.com/rayslava/minigps"
repository = "https://github.com/rayslava/minigps"

[badges]
maintenance = { status = "actively-developed" }
github = { repository = "rayslava/minigps", workflow = "ci" }
codecov = { repository = "rayslava/minigps", branch = "master", service = "github" }

[dependencies]
byteorder = { version = "1.4" }
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
gpx = { version = "0.8.6", features = ["use-serde"], git = "https://github.com/georust/gpx", rev = "4bc9a6f904013efb0ee623eeacd24a0cf5c66431" }  # TODO: Switch to release when it's ready
geo-types = { version = "0.7.5" }

[dev-dependencies]
assert_approx_eq = "1"