[package]
name = "minigps"
version = "0.1.3"
edition = "2018"
description = "Library for MiniGPS file format support"
authors = ["Slava Barinov <rayslava@gmail.com>"]
license = "MIT"
keywords = ["gps", "minigps", "geo", "geodata"]
categories = ["encoding"]
documentation = "https://docs.rs/minigps"
readme = "README.md"
homepage = "https://github.com/rayslava/minigps"
repository = "https://github.com/rayslava/minigps"

[badges]
maintenance = { status = "actively-developed" }
github = { repository = "rayslava/minigps", workflow = "ci" }
codecov = { repository = "rayslava/minigps", branch = "master", service = "github" }

[dependencies]
byteorder = { version = "1.4" }
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
gpx = { version = "0.9.1", features = ["use-serde"] }
geo-types = { version = "0.7.5" }

[dev-dependencies]
assert_approx_eq = "1"